--- a/index.html
+++ b/index.html
@@ -66,21 +66,29 @@
                 class="text-container p-4 d-flex flex-column justify-content-center h-100 mb-5"
               >
                 <h1 class="display-3 fw-bold">Welcome to Blog Mastery</h1>
-                <p class="lead">Are you ready to take your blogging journey to new heights?
+                <p class="lead">
+                  Are you ready to take your blogging journey to new heights?
                   Blog Mastery is your ultimate guide to creating and managing a
                   successful blog that captivates your audience and drives
-                  engagement.</p>
-                  <!-- form -->
-                   <div class="form-container text-center">
-                    <form>
-                      <div class="my-4">
-                        <input type="email" placeholder="Email Address" class="form-control form-control-lg rounded-5">
-                      </div>
-                      <div class="d-grid">
-                        <button class="btn btn-primary text-white btn-lg">Free Download.</button>
-                      </div>
-                    </form>
-                   </div>
+                  engagement.
+                </p>
+                <!-- form -->
+                <div class="form-container text-center">
+                  <form>
+                    <div class="my-4">
+                      <input
+                        type="email"
+                        placeholder="Email Address"
+                        class="form-control form-control-lg rounded-5"
+                      />
+                    </div>
+                    <div class="d-grid">
+                      <button class="btn btn-primary text-white btn-lg">
+                        Free Download.
+                      </button>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
@@ -108,6 +116,49 @@
         />
       </svg>
     </header>
+    <!-- Icons -->
+    <section class="icons bg-light pb-5">
+      <div class="container-xl">
+        <div class="row hstack g-4">
+          <div class="col-md-4 d-flex gap-4">
+            <i class="fas fa-user fa-3x text-primary"></i>
+            <div>
+              <h5 class="fw-bold">Unlock Your Blogging Potential</h5>
+              <p class="text-muted">
+                Discover the key to unleashing your true blogging potential. Our
+                ebook provides expert guidance on creating compelling content.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 d-flex gap-4">
+            <i class="fas fa-rocket fa-3x text-secondary"></i>
+            <div>
+              <h5 class="fw-bold">Skyrocket Your Blog's Success</h5>
+              <p class="text-muted">
+                Take your blog to new heights with our proven strategies for
+                driving traffic and increasing your blog's visibility.
+              </p>
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4 d-flex gap-4">
+            <i class="fas fa-dollar fa-3x text-primary"></i>
+            <div>
+              <h5 class="fw-bold">Monetize Your Blog</h5>
+              <p class="text-muted">
+                Turn your passion for blogging into a profitable venture. Our
+                ebook reveals tried-and-tested monetization strategies.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
