--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                 Take your blog to new heights with our proven strategies for
                 driving traffic and increasing your blog's visibility.
               </p>
-              </p>
             </div>
           </div>
           <div class="col-md-4 d-flex gap-4">
@@ -155,10 +154,44 @@
       </div>
     </section>
 
-
-
-
-
+    <!-- Details -->
+    <section id="details" class="details my-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="text-container d-flex flex-column justify-content-center h-100">
+              <h2 class="display-6">Unlock Your Blogging Potential</h2>
+              <p>
+                Are you ready to unleash your true blogging potential? Our
+                  ebook, "Blog Mastery," provides you with the tools and
+                  knowledge to take your blog to the next level.
+              </p>
+              <ul class="list-group list-group-flush lh-lg">
+                <li class="list-group-item">
+                  <i class="fas fa-square text-primary"></i>
+                  <strong>Unleash Your Creativity:</strong> Our ebook empowers
+                  you to unleash your creativity and express your unique voice
+                  through your blog.
+                </li>
+                <li class="list-group-item">
+                  <i class="fas fa-square text-primary"></i>
+                  <strong>Maximize Your Reach:</strong> Learn how to optimize
+                  your blog for search engines.
+                </li>
+                <li class="list-group-item">
+                  <i class="fas fa-square text-primary"></i>
+                  <strong>Monetization Strategies:</strong> Discover various
+                  monetization strategies, such as sponsored content &
+                  affiliate marketing.
+                </li>
+              </ul>
+              <a class="btn btn-primary text-white mt-4 align-self-start" data-bs-toggle="modal" data-bs-target="#modal1">Get Your Copy</a>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </section>
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
