fixed comment for header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </nav>
 
-    <!-- Header -->
+    <!-- Header/Hero -->
     <header class="header">
       <!-- Hero -->
       <div class="hero text-white pt-7">
